--- a/account.html
+++ b/account.html
@@ -28,7 +28,7 @@
 <body class="font-[Poppins]">
     <div class="image h-screen 2xl:container mx-auto">
         <div id="loginbox" class="w-[90%] h-screen mx-auto text-white">
-            <div class="h-screen grid grid-cols-2">
+            <div class="h-screen grid grid-cols-1 md:grid-cols-2">
                 <div class="flex flex-col gap-7 justify-center items-center">
                     <p class="font-semibold text-[60px]">Welcome Back!</p>
                     <p>Log in to continue your culinary adventure with us</p>
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div id="signbox" class="w-[90%] h-screen mx-auto text-white hidden">
-            <div class="h-screen grid grid-cols-2">
+            <div class="h-screen grid grid-cols-1 md:grid-cols-2">
                 <div class="flex flex-col gap-7 justify-center items-center text-center">
                     <p class="font-semibold text-[60px]">Join Eats n Treats Today!</p>
                     <p>Sign up now and enjoy exclusive offers, hassle-free orders, and quick access to your favorite meals!
