updated account page

--- a/account.html
+++ b/account.html
@@ -29,11 +29,12 @@
     <div class="image h-screen 2xl:container mx-auto">
         <div id="loginbox" class="w-[90%] h-screen mx-auto text-white">
             <div class="h-screen grid grid-cols-1 md:grid-cols-2">
-                <div class="flex flex-col gap-7 justify-center items-center">
+                <div class="hidden md:flex flex-col gap-7 justify-center items-center text-center">
                     <p class="font-semibold text-[60px]">Welcome Back!</p>
                     <p>Log in to continue your culinary adventure with us</p>
                 </div>
-                <div class="flex justify-center items-center">
+                <div class="flex flex-col justify-center items-center gap-5">
+                    <div class="md:hidden flex font-semibold text-[45px] text-center">Welcome Back!</div>
                     <div
                         class="flex flex-col gap-7 w-fit h-fit justify-center items-center border-white border-2 border-solid p-10">
                         <div>
@@ -64,12 +65,13 @@
         </div>
         <div id="signbox" class="w-[90%] h-screen mx-auto text-white hidden">
             <div class="h-screen grid grid-cols-1 md:grid-cols-2">
-                <div class="flex flex-col gap-7 justify-center items-center text-center">
+                <div class="hidden md:flex flex-col gap-7 justify-center items-center text-center">
                     <p class="font-semibold text-[60px]">Join Eats n Treats Today!</p>
-                    <p>Sign up now and enjoy exclusive offers, hassle-free orders, and quick access to your favorite meals!
+                    <p class="hidden md:flex">Sign up now and enjoy exclusive offers, hassle-free orders, and quick access to your favorite meals!
                     </p>
                 </div>
-                <div class="flex justify-center items-center">
+                <div class="flex flex-col justify-center items-center gap-5">
+                    <div class="md:hidden flex font-semibold text-[45px] text-center">Join Eats n Treats Today!</div>
                     <div
                         class="flex flex-col gap-7 w-fit h-fit justify-center items-center border-white border-2 border-solid p-10">
                         <div>
