--- a/account.html
+++ b/account.html
@@ -36,7 +36,7 @@
                 <div class="flex flex-col justify-center items-center gap-5">
                     <div class="md:hidden flex font-semibold text-[45px] text-center">Welcome Back!</div>
                     <div
-                        class="flex flex-col gap-7 w-fit h-fit justify-center items-center border-white border-2 border-solid p-10">
+                        class="flex flex-col gap-7 w-fit h-fit justify-center items-center border-white border-2 border-solid p-10 m-20 md:m-0">
                         <div>
                             <p class="font-medium text-[35px]">LOGIN</p>
                         </div>
@@ -73,7 +73,7 @@
                 <div class="flex flex-col justify-center items-center gap-5">
                     <div class="md:hidden flex font-semibold text-[45px] text-center">Join Eats n Treats Today!</div>
                     <div
-                        class="flex flex-col gap-7 w-fit h-fit justify-center items-center border-white border-2 border-solid p-10">
+                        class="flex flex-col gap-7 w-fit h-fit justify-center items-center border-white border-2 border-solid p-10 m-20 md:m-0">
                         <div>
                             <p class="font-medium text-[35px]">SIGNUP</p>
                         </div>
