--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                                 class="fa-solid fa-circle-user fa-xl mx-3"></i>Account</a></li>
                     <li class="hover:text-white"><a href="#"><i
                                 class="fa-solid fa-magnifying-glass fa-xl mx-3"></i>Search</a></li>
-                    <li class="hover:text-white"><a href="#"><i
-                                class="fa-solid fa-cart-shopping fa-xl mx-3"></i>Order</a></li>
+                    <li class="hover:text-white"><a href="help.html"> <i class="fa-regular fa-comment-dots fa-xl m-3"></i>
+                                                        Help</a></li>
                 </ul>
             </div>
             <div id="nav_div" class="flex justify-end md:hidden">
@@ -56,7 +56,7 @@
                         <a href="index.html" class="hover:text-white hover:cursor-pointer">Home</a>
                         <a href="account.html" class="hover:text-white hover:cursor-pointer">Account</a>
                         <a href="#" class="hover:text-white hover:cursor-pointer">Search</a>
-                        <a href="#" class="hover:text-white hover:cursor-pointer">Order</a>
+                        <a href="help.html" class="hover:text-white hover:cursor-pointer">Help</a>
                     </div>
                 </div>
             </div>
@@ -380,6 +380,8 @@
         </div>
     </section>
 </body>
+
+<!------------------Responsive nav bar------------------->
 <script>
     const nav = document.getElementById("nav_icon");  //bar_icon
     const cross = document.getElementById("cross_icon");  //cross_icon
